# Robocon_R2

./: .gitignore  18.weapon_detection.py  CODEBASE_GUIDE.md  PROJECT_OVERVIEW.md  Yahboom_test.py  app_manager_bt_master.py  arm_action_client.py  arm_diagnostic_client.py  demo_kfs_3d.py  diagram.md  doc.md  kfs_align_grasp_server.py  kfs_vision_node.py  label_class.txt  log.txt  meihua_forest.txt  pt_to_onnx.py  r2_kfs_align_node.py  robot_control_node.py  target_action_server.py  teleop_keyboard.py  teleop_omni.py  teleop_test_arm.py  test_esp32_arm.py  test_kfs_align_move.py  test_kfs_align_ros.py  test_kfs_align_visual.py  test_kfs_auto_grasp.py  test_kfs_detection.py  test_laser_distance.py  test_openmv_camera.py  tracking_client.py  wall_alignment_client.py  weapon_detection.py  yolo_ros_node.py  yolo_server.py
app_manageger/: app_manager_main.py  bt_nodes.py  bt_sequences.py  gui_entrance_panel.py  gui_start_panel.py  test_balackboard.py
docs/: mission_timing_analysis.md
src/ak60_bringup/: CMakeLists.txt  package.xml
src/ak60_bringup/action/: ArmSequence.action  ClimbStep.action  FollowTarget.action  K230Align.action  MoveArm.action  MoveToEdge.action  WallAlignment.action
src/ak60_bringup/config/: ekf.yaml
src/ak60_bringup/launch/: action_server.launch.py  ak60.launch.py  ak60_odom.launch.py  app.launch.py  hardwear.launch.py  robot_test.launch.py
src/ak60_bringup/maps/: my_map.yaml
src/ak60_bringup/scripts/: app_manager_bt.py  arm_action_server.py  edge_detection_server.py  esp32_arm_action_server.py  k230_align_server.py  odom_nav_server.py  step_climb_server.py  tracking_server.py  wall_alignment_server.py
src/ak60_bringup/scripts/r2_bt/: blackboard.py  config.py  jetson_read_uart.py  main.py
src/ak60_bringup/scripts/r2_bt/behaviors/: blackboard_ops.py  climb.py  grid_logic.py  hardware.py  move_to_edge_client.py  navigation.py
src/ak60_bringup/scripts/r2_bt/trees/: builders.py  mission.py  mission_test.py  test_mission.py  test_weapon.py
src/ak60_description/: CMakeLists.txt  package.xml
src/ak60_description/urdf/: chassis.xacro  manipulator.xacro  older_robot.urdf.xacro  properties.xacro  robot.urdf.xacro  ros2_control.xacro  wheel.xacro
src/ak60_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ak60_moveit_config/config/: ak60_robot.ros2_control.xacro  ak60_robot.srdf  ak60_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/ak60_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ak60_robot_driver_control/: CMakeLists.txt  package.xml  plugin.xml
src/ak60_robot_driver_control/config/: controllers.yaml
src/ak60_robot_driver_control/include/ak60_robot_driver_control/: rocker_bogie_controller.hpp
src/ak60_robot_driver_control/launch/: bringup.launch.py  teleop.launch.py
src/ak60_robot_driver_control/rviz/: robot_view.rviz
src/ak60_robot_driver_control/src/: rocker_bogie_controller.cpp
src/ak60_robot_driver_control/urdf/: robot.urdf.xacro
src/ak60_robot_driver_io/: package.xml  setup.cfg  setup.py
src/ak60_robot_driver_io/ak60_robot_driver_io/: ak_can_protocol.py  can_bridge.py  debug_arm_can.py  laser_distance.py  read_imu_node.py  servo_driver.py  steer_node.py  waveshare_controlcanfd.py
src/ak60_robot_driver_io/launch/: io.launch.py
src/my_robot_navigation/: CMakeLists.txt  package.xml
src/my_robot_navigation/config/: nav2_params.yaml
src/my_robot_navigation/launch/: nav_bringup.launch.py
src/my_robot_slam/: CMakeLists.txt  package.xml
src/my_robot_slam/config/: slam_config.yaml
src/my_robot_slam/launch/: my_slam.launch.py
src/robot_hw_interface/: CMakeLists.txt  package.xml  robot_hw_interface.xml
src/robot_hw_interface/config/: servo_offsets.yaml
src/robot_hw_interface/include/robot_hw_interface/: hw_robot_interface.hpp
src/robot_hw_interface/launch/: test_hw.launch.py  test_hw.launch.py_older
src/robot_hw_interface/src/: hw_robot_interface.cpp
src/robot_hw_interface/urdf/: test_robot.urdf  test_robot_new.urdf
src/scripts/: ak60_keyboard.py  depth_reader.py  usb_auto_reset.py
